--- a/server/package.json
+++ b/server/package.json
@@ -13,12 +13,15 @@
   "author": "Nguyen Song Khoa",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "mysql2": "^3.3.3",
+    "sequelize": "^6.32.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.1",
