--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.12.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.3",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "sweetalert2": "^11.7.11",
