--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,10 @@
     "react-router-dom": "^6.12.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.3",
+    "react-slick": "^0.29.0",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
+    "slick-carousel": "^1.8.1",
     "sweetalert2": "^11.7.11",
     "web-vitals": "^2.1.4"
   },
