--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "buffer": "^6.0.3",
+    "google-map-react": "^2.2.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-places-autocomplete": "^4.0.1",
     "react-icons": "^4.9.0",
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.7",
