--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,8 @@
     "jsonwebtoken": "^9.0.0",
     "moment": "^2.29.4",
     "mysql2": "^3.3.3",
+    "pg": "^8.11.0",
+    "pg-hstore": "^2.3.4",
     "sequelize": "^6.32.0"
   },
   "devDependencies": {
