--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --exec babel-node app.js",
+    "start": "node --require @babel/register app.js",
     "dev": "nodemon --exec babel-node app.js"
   },
   "keywords": [
